# Secure-QR-Code-Generator

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  install.bat  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  run.sh  secure_qr_generator.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security_configuration.yml
.github/workflows/: release-build.yml  security.yml  test.yml
docs/: COMMANDS.md  FEATURES.md  INSTALLATION.md  payload-formats.md  publishing.md  threat-model.md
src/secure_qr/: __init__.py  __main__.py  batch.py  cli.py  decoder.py  errors.py  models.py  payloads.py  renderer.py  security.py
tests/: test_decoder.py  test_payloads.py  test_renderer.py  test_security.py
