[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secure-qr-code-generator"
version = "0.2.0"
description = "Security-focused QR generator, passive decoder, signer, and analyzer"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Devansh Patel" }]
dependencies = [
  "cryptography>=44,<47",
  "opencv-python-headless>=4.10,<5",
  "Pillow>=11,<13",
  "qrcode[pil]>=8,<9",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]

[project.optional-dependencies]
dev = [
  "hypothesis>=6,<7",
  "mypy>=1.14,<2",
  "pytest>=8,<10",
  "pytest-cov>=6,<8",
  "ruff>=0.9,<1",
]

[project.scripts]
secure-qr = "secure_qr.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
secure_qr = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["secure_qr"]
